Ajout d'exercices simples numpy et matplotlib.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1160,6 +1160,138 @@
      "prompt_number": 45
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Broadcasting"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\n",
+      "- Le broadcasting consiste \u00e0 remplir automatiquement les dimensions \"manquantes\" d'un tableau de donn\u00e9es.\n",
+      "- Usage typique: coordonn\u00e9es x,y,z dans un contexte de donn\u00e9es de surface (2D) ou de volume (3D).\n",
+      "- Ci-dessous: nombre de points en m\u00e9moire pour x et y: 100+100=200. Sans broadcasting: 2\\*100\\*100=20000. Pas de changement pour \"x+4\\*y\\*\\*2\""
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = linspace(0,10,100).reshape((1, -1))\n",
+      "y = -0.5 + linspace(0,1,100).reshape((-1, 1))\n",
+      "pcolor(x+4*y**2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 71
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Utilisez l'aide!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "IPython fournit de l'aide \"\u00e0 la demande\""
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plot?"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 49
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Exercice:\n",
+      "\n",
+      "A l'aide de la commande \"contour\", r\u00e9aliser un contour avec 5 niveaux pour la fonction sin(x)\\*sin(y) avec $x \\in [0:4 \\pi]$ et $y \\in [0:4\\pi]$, un affichage correct des axes (valeurs) et une colorisation en niveaux de gris."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x_axis = linspace(0, 4*pi, 100).reshape((-1, 1))\n",
+      "y_axis = linspace(0, 4*pi, 100).reshape((1, -1))\n",
+      "z = sin(x_axis)*sin(y_axis)\n",
+      "contour(z, 5, extent=[0,4*pi,0,4*pi], cmap=cm.gray)"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 70
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Exercice: diff\u00e9rentiation\n",
+      "-------------------------\n",
+      "\n",
+      "- Calculez, pour $x\\in [0:2 pi]$, la d\u00e9riv\u00e9e num\u00e9rique centr\u00e9e de $y=\\sin(x)$\n",
+      "$$ y'_i = \\frac{ y_{i+1} - y_{i-1} }{2 dx}$$\n",
+      "- R\u00e9alisez l'op\u00e9ration avec la notation vectorielle.\n",
+      "- Afficher le r\u00e9sultat avec la commande plot, avec une abscisse normalis\u00e9e par rapport \u00e0 $\\pi$.\n",
+      "- Comparer avec la solution connue.\n",
+      "- Remarque: en \"d\u00e9coupant\" y, vous perdez deux points de donn\u00e9es."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Nx = 100\n",
+      "dx = 2*pi/Nx\n",
+      "x = arange(Nx)*dx\n",
+      "y = sin(x)\n",
+      "\n",
+      "plot(x[1:-1]/pi, 0.5*(y[2:]-y[:-2])/dx)\n",
+      "plot(x/pi, cos(x))"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 69
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
