Ajout slide intro + aspect OO.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -54,6 +54,24 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Python comme outil de calcul scientifique\n",
+      "-----------------------------------------\n",
+      "\n",
+      "- Python est un language *g\u00e9n\u00e9raliste*.\n",
+      "    - Il est n\u00e9cessaire d'utiliser (importer) les librairies scientifiques.\n",
+      "    - Mais il est possible de faire \"tout\" avec Python.\n",
+      "- Les outils Python sont open-source (et donc gratuits, mais le concept open-source va plus loin).\n",
+      "- Il existe des alternatives open-source (R, octave, scilab, perl) ou payantes (Matlab, Mathematica). "
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {
@@ -72,6 +90,7 @@
       "- Python est un language:\n",
       "    - *typ\u00e9 dynamiquement*\n",
       "    - *interpret\u00e9*\n",
+      "    - *orient\u00e9 objet*\n",
       "- Par opposition:\n",
       "    - C et Fortran sont *compil\u00e9s* et *typ\u00e9s statiquement*\n",
       "  "
