Changement de slide_type.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1157,7 +1157,11 @@
       "legend()"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
