Ajout de liens docs.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1275,6 +1275,25 @@
      "prompt_number": 70
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Utilisez la documentation!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\n",
+      "- [docs Python 2.7](http://docs.python.org/2.7/)\n",
+      "- [docs SciPy](http://docs.scipy.org/)\n",
+      "- [matplotlib](http://matplotlib.org/contents.html)\n",
+      "- [Python Scientific Lecture Notes](http://scipy-lectures.github.io/)"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
