Ajout de timing pour les opérations vectorielles.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1218,6 +1218,49 @@
      "prompt_number": 71
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Performance des op\u00e9rations sur ndarray\n",
+      "--------------------------------------\n",
+      "\n",
+      "Les op\u00e9rations vectorielles cr\u00e9ent des tableaux temporaires et n\u00e9cessitent une allocation m\u00e9moire.\n",
+      "Pour des tableaux de grande taille, il y a un impact sur les performances et l'usage m\u00e9moire."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "a = rand(1000,1000) ; b = rand(1000,1000) ; c = rand(1000,1000)\n",
+      "%timeit G=a*b+c\n",
+      "%timeit multiply(a,b,a) ; add(a,c,a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 88
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = rand(1000,1000) ; b = rand(1000,1000) ; c = rand(1000,1000)\n",
+      "G = a*b+c\n",
+      "multiply(a,b,a)\n",
+      "add(a,c,a)\n",
+      "allclose(G,a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 88
+    },
+    {
      "cell_type": "heading",
      "level": 2,
      "metadata": {
