Ajout de 'lecture de données'

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1066,6 +1066,54 @@
       }
      },
      "source": [
+      "Lecture de donn\u00e9es\n",
+      "------------------\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import csv\n",
+      "reader = csv.reader(open('csvdata.csv'))\n",
+      "x = [] ; y = []\n",
+      "for row in reader:\n",
+      "    x.append(float(row[0]))\n",
+      "    y.append(float(row[1]))\n",
+      "plot(x,y)\n",
+      "x, y = loadtxt('csvdata.csv', delimiter=',', unpack=True)\n",
+      "plot(x,y)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 103,
+       "text": [
+        "[<matplotlib.lines.Line2D at 0xbc261d0>]"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAEACAYAAACj0I2EAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFoBJREFUeJzt3X+cVHW9x/HXInKVi2mGPwLUpURvKHUt0VKJSU1NUfxx\nS/xxuxdSCwy9gCirPWTVfvgjFKTUW10UMrbwRyZJpqhT2BWpAEWRBIIuaP5cSzdFWXbuH+fgDsvu\nztnZ2T0z57yej8c85syZM+PHecB7D5/v+cyCJEmSJEmSJEmSJEmSJElSWZgFvAysaLF/PPAc8Axw\nXd7+GmA1sAo4rjsKlCRFMww4hG0D/XPAw8CO4eM9wvvBwPJwfzWwBujRLVVKkiKpZttAnwcc3cpx\nNcBleY8fBD7ddWVJkvIVcwY9CPgssBjIAoeG+/sBG/OO2wj070xxkqToehb5mg8SnH0PJThj/0gb\nx+aKrEuS1EHFBPpG4N5w+/dAE9AXeAHYJ++4AeG+bXz0ox/NrV27toj/rCSl2lpg//YOKKblch/N\nPfQDgF7Aa8D9wKjw8UCC1syS7Spau5ZcLuctl2Pq1Kmx11AuNz8LPws/i+1vcx9bStWlezD9vizA\nRwuFc6FArwP+NwzuDcBogksZP0KwUFoHfDk8diVB+2Ul8CtgHLZcJKko2af+zLkLRjDpwFu5eOTw\nSK8p1HI5q439/97G/m+HN0lSkZ5d/wrHzTmeL/X7BjeMOSPy67xOPEaZTCbuEsqGn0UzP4tmafws\nXqpv4PAZIzi8zyjqJo3t0Guruqim9uRyOTsxktTS25s2s2/NyXyo5wCeu+6H9OjRHNFVVVVQILMN\ndEkqA01NOQZd+h80bHmDv1z3c3bqtW1HPEqgF3PZoiSpxD5z5RReaVzDuqsWbhfmURnokhSz066b\nzvK37+eZSx6n7669i34fA12SYnTRD37K/Nem8ZuvPM6gAR/q1HsZ6JIUkxvueYTvrb2Yu0Yu5MiD\n9uv0+xnokhSDuuwyLltyFjcdcRdnHDWkJO/pdeiS1M2KmQKNwssWJakbPbv+FQ6ZeSRn9JvYocEh\nr0OXpDLyUn0D+19zNId84HgWXXVNh15roEtSmWhvCjQKA12SykChKdAonBSVpDJQiinQKAx0SepC\npZoCjcJAl6QuUsop0CgMdEnqAqWeAo3CQJekEuuKKdAonBSVpBLqqinQKLxsUZJKpNgp0Ci8Dl2S\nuklnpkCjMNAlqRt0dgo0CgNdkrpYKaZAo3BSVJK6WHdNgUZhoEtSkbpzCjQKA12SitDdU6BRGOiS\n1EFxTIFGYaBLUgfENQUaRaFJ0VnAy8CKvH21wEZgWXj7Qt5zNcBqYBVwXMmqlKQy8Nun18U2BRpF\nocsWhwENwBxg64+iqcBbwI0tjh0MzAWGAv2BhcABQFOL47xsUVLFee7/XuUTM47kjH4TSj4FGkWU\nyxYLnaEvAt5o7b1b2TcSqAM2A+uBNcBhhYqUpHL3Un0DQ286icP7nBlLmEdV7JdzjQeeAv4H2C3c\n14+gFbPVRoIzdUmqWG9v2szB1/wb/Xt+nN9MvTructpVTKDfCgwE/hX4KzCtnWPtrUiqWE1NOYZ8\n4yvswI489a3bumSkv5SKucrllbztHwHzw+0XgH3ynhsQ7ttObW3t+9uZTIZMJlNEGZLUtY64sia2\nKdBsNks2m+3Qa6L8uKkmCO2ti6IfJjgzB5hAsAh6Ns2LoofRvCi6P9ufpbsoKqnsnX79DB546Tae\nmVgeg0Ol+C6XOmA40BfYQHCFS4ag3ZID1gFfDY9dCcwL7xuBcdhykVSBLvrBT7n/1e+W1RRoFH7b\noiTlueGeR7hsydncdfLCshoc8tsWJakDynkKNAp/p6gkUf5ToFHYcpGUenFPgUbhbyySpAK6+neB\nloqBLknt6I7fBVoqBroktaG7fhdoqXiViyS1Ic4p0K6SjP8LSeqA06+fwbK3f1E2vwu0VAx0SalS\nqVOgURjoklKjXH8XaKkY6JJSodKnQKNwUlRS4iVhCjQKL1uUlGiVMAUahdehS0q1SpkCjcJAl5Ra\nlTQFGoWBLimVKm0KNAonRSWlUhKnQKNIz/+ppFRI6hRoFAa6pMRI8hRoFAa6pESYdu+jiZ4CjcJA\nl1Tx6rLLmPzkqERPgUbhpKikipaWKdAovGxRUsVKyhRoFF6HLimxkjQFGoWBLimR3t60mf1qTmH3\nnv0TMQUahYEuKXGCKdD/pGFLfWKmQKNwUlRS4gRToKtTNwUahZ+GpIqR5inQKAx0SRUh7VOgURS6\nDn0W8DKwopXnJgFNwO55+2qA1cAq4LhSFChJW6dAfzZyQWqnQKMoFOi3Aye0sn8f4PPAX/L2DQbO\nDO9PAG6J8P6S1K7mKdB5qZ4CjaJQ4C4C3mhl/43ApS32jQTqgM3AemANcFgn65OUYk6BdkwxZ9Aj\ngY3A0y329wv3b7UR6F9kXZJS7tHlazl29vF8aa9vcMOYM+IupyJ0dFG0N3A5Qbtlq/aui2z1gvPa\n2tr3tzOZDJlMpoNlSEqqvzVs4vRp15N952bO2Ls28SP9bclms2Sz2Q69JspgUTUwHxgS3hYCb4fP\nDQBeAA4HRof7rg3vHwSmAk+2eD8HiyS16tq7HubKxReyR24I954/ncM/tk/cJZWNrhgsWgHslfd4\nHfApoB64H5hL0F/vDwwClnTw/SWl0NLVL3LqrRP4a4/f841PfY+pZ58Yd0kVqVCg1wHDgQ8BG4Ar\nCa582Sr/VHslMC+8bwTG0UbLRZIANr3XyFk3fY9fvPEtjtplLMsn3cHuH9g57rIqlt/lIikWP/jV\nE1z80Fh2zvXlJ+d8ny8MPTDuksqa3+Uiqeys3vg6J8+YwuqqBVz4sWlMP+/MVHxbYncw0CV1i8Yt\nTZz//TuY88LlDOl5JusmrGTfPXeNu6xEMdAldbm7Fz3NmHvG0VS1mTknL+Ccoz8Zd0mJZKBL6jIv\nvv4Wp0yrZemWH3N29Te5Y/x59NzBbwTpKga6pJJrasox+fZ7mLFqAgNzx7Li689wUPWecZeVeAa6\npJJ6ZNkaRs0Zz1tVG5j+ubl8/eRhcZeUGga6pJL4W8MmTpt2Hb95ZyYn7jmFeRMupvdOO8ZdVqoY\n6JI67TvzHmLqkxeyR+7jPHH+Mkf2Y2KgSyraH55/gdNvm+jIfpkw0CV12Kb3Ghl140zu/9u3OGqX\ncY7slwkDXVKH5I/sP3DO7xzZLyMGuqRIHNkvfwa6pHY5sl85DHRJbXJkv7IY6JK248h+ZTLQJb3P\nkf3KZqBLAhzZTwIDXUo5R/aTw0CXUsyR/WQx0KUUcmQ/mQx0KUXyR/aP3GWsI/sJY6BLKfHfC/6X\n/3p4LDvn9nBkP6EMdCnhHNlPDwNdSqitI/uzX6jh4z1HObKfAga6lEDByP5Ymqoa+fHJv3JkPyUM\ndClBHNlPNwNdSgBH9gUGulTxHNnXVoX+LTYLeBlYkbfvGuApYDnwCJA/WlYDrAZWAceVrkxJLf2t\nYROfu+oqPv+zT3P4nsdQ/+1lhnnKFbp2aRjQAMwBhoT7dgHeCrfHA58AzgMGA3OBoUB/YCFwANDU\n4j1zuVyu04VLabZ1ZL9v0xB+fsEMR/ZToKqqCgpkdqGWyyKgusW+t/K2+wCvhdsjgTpgM7AeWAMc\nBiyOUqykwvJH9q/45Exqzzkp7pJURortoX8L+HfgHYLQBujHtuG9keBMXVIntRzZXzrxdvru2jvu\nslRmig30K8LbFGA6MLqN41rtrdTW1r6/nclkyGQyRZYhJZ8j++mUzWbJZrMdek2U+d9qYD7NPfR8\n+wILgIMJwh3g2vD+QWAq8GSL19hDlyLYZmR/f0f20y5KD72YiYNBedsjgWXh9v3AKKAXMDA8bkkR\n7y+lWuOWJkbfPIsDZw5mp569WXfJSm6+YJRhroIKtVzqgOFAX2ADwRn3icCBwBZgLTA2PHYlMC+8\nbwTG0UbLRdL2mppyTPv5o1yz6EpH9lWUOH7k23KR8rz5j3eZdMdPuXPNjeSqGjn3I5O5beyXHdnX\nNqK0XAx0KSZ/2vAaF95+G4813MIH3xvChM9MpOaLx9laUatKcR26pBJbsGQVl9w9nVU7/IxBjWdw\n96kPcdqRB8ddlhLAQJe6wdb++A2P38jrvf7IsN5fY95/rOLggXvFXZoSxECXulDL/viogROZPuYe\nduuzU9ylKYHsoUtdwP64Ss0eutTN7I8rTga61En2x1UuDHSpSPbHVW7soUsdZH9ccbCHLpWQ/XGV\nOwNdaof9cVUSA11qhf1xVSJ76FIe++MqV/bQpYjsjysJDHSlVn5//LVef+CzvcfaH1dFM9CVOi37\n42dWT+Cm0Xez+wd2jrs0qVPsoSs17I+rktlDl9i2P75/4+n2x5VYBroSyf640shAV6LYH1ea2UNX\nItgfV9LZQ1fi2R+Xmhnoqjj2x6XWGeiqGPbHpfbZQ1fZsz8u2UNXhbM/LnWMga6yYn9cKp6BrrJg\nf1zqvEJNyFnAScArwJBw3w3ACOA9YC0wGvh7+FwNMAbYAlwEPNTKe9pD1/satzTxtVvncPv/XW5/\nXGpHlB56ob81w4AGYA7Ngf554BGgCbg23DcFGAzMBYYC/YGFwAHhcfkMdAFwz+MrGHP3OLZUvcst\nJ93Cl489NO6SpLIVJdB7FHiPRcAbLfY9THNIPwkMCLdHAnXAZmA9sAY4LHK1So2X6hsYesVkvjj/\nGE7a9xzqr3/CMJdKoLM99DEEIQ7QD1ic99xGgjN1CQgWPC+7415uem4C++U+x9MXrnCxUyqhzgT6\nFQR99LntHNNqb6W2tvb97UwmQyaT6UQZqgSPLl/LqNnjebPqL0wb/mMuHjk87pKkspbNZslmsx16\nTZSVp2pgPs09dID/BM4HjgE2hfumhPdb++oPAlMJ2jL57KGnyJv/eJfTpl3PY2/P4IRdLmXexP+i\nz8694i5LqjhdNVh0AjAZGE5zmAPcT3C2fiNBq2UQsKSI91dCXHvXw1y5+EL6Nh3EovP+yJEH7Rd3\nSVKiFQr0OoLg7gtsIDjjrgF6ESyOAjwBjANWAvPC+8Zwn6fiKbR09YuceutE/trjSWoOmcnV546I\nuyQpFfwuF5XMpvcaOXv697mv/psc0eur3Dfpcvru2jvusqRE8Ltc1G1+9OBiLvr1WHbK7c4vz17E\niYf9S9wlSaljoKtT1r5Yz4jpNTzPfL524HeZecFZTnlKMTHQVZTGLU1ccMtsZm+s4aAeX+TPE1ay\n3167xV2WlGoGujosf2R/9ogHOPeYT8VdkiQMdHXAS/UNnDztKv7YOJtR+17NHePPp9eOO8RdlqSQ\nga6CHNmXKoOBrnY5si9VDgNdrdpmZL+vI/tSJTDQtR1H9qXKZKDrfY7sS5XNQNe2I/t9vsrSSbMc\n2ZcqkIGeco7sS8lhoKfU6o2vc8rNNTzPLx3ZlxLCQE+Z/JH9g3t8iXUTn2PfPXeNuyxJJWCgp4gj\n+1KyGegp4Mi+lA4GeoK1HNlf8fVnOKh6z7jLktRFDPSEcmRfSh8DPWEc2ZfSy0BPEEf2pXQz0BPA\nkX1JYKBXNEf2JeUz0CuUI/uSWjLQK4wj+5LaYqBXCEf2JRVioFeAex5fwei7x9JU9Z4j+5LaZKCX\nsZfqGxgxrZaljXMc2ZdUkIFehvJH9qtzRzuyLymSHgWenwW8DKzI2/dF4FlgC/DJFsfXAKuBVcBx\nJaoxVR5dvpa9J53EzGeu5KZhd7Lmu3cY5pIiKRTotwMntNi3AjgN+G2L/YOBM8P7E4BbIry/Qm/+\n412Oufoajv3p4RzaN0P9t5cz/pTPxl2WpApSqOWyCKhusW9VG8eOBOqAzcB6YA1wGLC4+PLSoXlk\n/2B+d/5SPjN437hLklSBStlD78e24b0R6F/C908cR/YllVJXL4rmuvj9K1L9m+9w9s0zeKjhuxzR\n52uO7EsqiVIG+gvAPnmPB4T7tlNbW/v+diaTIZPJlLCM8tW4pYnxP5jLD/98BXtvGcqvz3mCz39q\nUNxlSSpD2WyWbDbboddEmRmvBuYDQ1rsfwy4BPhj+HgwMJegb94fWAjsz/Zn6blcLn0n7tPvy3L5\nbybRgx254dhpjD3pyLhLklRBqqqqoEBmFzpDrwOGA32BDcBUoB6YGe57AFgGfAFYCcwL7xuBcdhy\nYcGSVYypu5TXd1jBuMHXctNXvuR3r0jqEnEkSyrO0J9d/wqjbr2KZ6vmceKulzH3ovF84J//Ke6y\nJFWoUpyhq4Pq33yHs26ezsMN0/hEj3P504WrGDTgQ3GXJSkFDPQSccFTUtwM9BJoXvDsyc3H/IRx\nI46KuyRJKWSgd4ILnpLKiYFehG0WPPe8jLkX3eWCp6TYGegd4IKnpHJmoEfggqekSmCgF+CCp6RK\nYaC3wQVPSZXGQG/BBU9JlcpAD7ngKanSpT7Q8xc899pyqAuekipWqgPdBU9JSZLKQHfBU1ISpSrQ\nXfCUlGSpCHQXPCWlQaID3QVPSWmS2EB3wVNS2iQu0F3wlJRWiQl0FzwlpV3FB7oLnpIUqNhAd8FT\nkrZVkYHugqckba+iAt0FT0lqW0UEessFzzvHz2O3PjvFXZYklZWyDvT8Bc+P9zjHBU9JakdZBroL\nnpLUcWUX6C54SlJxehR4fhbwMrAib9/uwMPA88BDwG55z9UAq4FVwHEdKWTBklXsPeEUJj8+mvM+\nNpk3py02zCWpAwoF+u3ACS32TSEI9AOAR8LHAIOBM8P7E4BbIrw/z65/hSGXXciIe4dx6J6f5dXa\n57j5glGpuHolm83GXULZ8LNo5mfRzM+iYwoF7iLgjRb7TgFmh9uzgVPD7ZFAHbAZWA+sAQ5r643r\n33yH47/5HYbcNpgdevTkT19fxS9rLknV1Sv+YW3mZ9HMz6KZn0XHFNND34ugDUN4v1e43Q9YnHfc\nRqB/a28w9tY7XfCUpBLr7KJoLry19/x2fvz8TBc8JSkG1Wy7KLoK2Dvc/nD4GIJe+pS84x4EDm/l\n/dbQ/IPAmzdv3rxFu62hBKrZNtCvBy4Lt6cA14bbg4HlQC9gILAWSP7KpiRViDrgReA9YAMwmuCy\nxYW0ftni5QQ/RVYBx3drpZIkSZI6prUhpbTaB3gMeBZ4Brgo3nJitRPwJEG7biXwnXjLKQs7AMuA\n+XEXErP1wNMEn8WSeEuJ3W7A3cBzBH9PPh1vOTAMOAQDHYJF5X8Nt/sAfwI+Fl85sesd3vckuPQ1\n7Zc/TQR+AtwfdyExW0fQ4lUw8zMm3O4J7NraQQUnOUuotSGltHqJ4IwUoIHgp26/+MqJ3dvhfS+C\ns9P6GGuJ2wDgROBHeFEB+BlAEN7DCLocAI3A31s7sDsDXa2rJviXy5Mx1xGnHgQ/4F4maEWtjLec\nWN0ETAaa4i6kDOQILsD4A3B+zLXEaSDwKsFXsSwFfkjzv2pjVY0tl3x9CP6wnlrowJTYlaDlkom5\njriMAL4fbmewh/7h8H4Pgh/4w2KsJU6HEnylytDw8XTg6tYO9Aw9PjsC9wB3AvfFXEu5+DvwAMEf\n4DQ6guC7ktYRXDJ8NDAn1ori9dfw/lXg57Tz3VAJtzG8/T58fDfwyfjKaVaNZ+gQ9AXnEPzzOu36\n0jzLsDPwW+CY+MopG8NJ9xl6b2CXcPufgd/Rwa/kTpjfEnzDLUAtcF18pQS2Dim9S/OQUlodRdAj\nXU5wSdYytv+a4rQYQtAXXE5widrkeMspG8NJ91UuAwn+TCwnuLS3Jt5yYvcJgjP0p4B7aeMqF0mS\nJEmSJEmSJEmSJEmSJEmSJEkp9P+HQaxD4APoDQAAAABJRU5ErkJggg==\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0xb874290>"
+       ]
+      }
+     ],
+     "prompt_number": 103
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
       "Manipulation de donn\u00e9es\n",
       "-----------------------\n",
       "\n",
