Ajout de 'programmes' avec argparse et mayavi.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1441,9 +1441,9 @@
      "metadata": {},
      "source": [
       "- Performances\n",
+      "- Cr\u00e9ation de programmes\n",
       "- Visualisation 3D\n",
-      "- Contr\u00f4le de r\u00e9vision\n",
-      "- Cr\u00e9ation de programmes"
+      "- Contr\u00f4le de r\u00e9vision\n"
      ]
     },
     {
@@ -1561,6 +1561,86 @@
       }
      ],
      "prompt_number": 123
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Cr\u00e9ation de programmes"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- L'usage interactif peut devenir restrictif:\n",
+      "    - Difficult\u00e9 \u00e0 reproduire rapidement un calcul.\n",
+      "    - Une analyse de donn\u00e9es sur un cluster scientifique n\u00e9cessite un programme autonome.\n",
+      "- Il y a deux pistes principales pour construire un outil de calcul:\n",
+      "    - La cr\u00e9ation de librairies (modules, en Python).\n",
+      "    - L'\u00e9criture de programmes autonomes lanc\u00e9s en ligne de commande."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "L'outil principal pour cr\u00e9er un programme est la librairie argparse."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# executer comme programme independant!\n",
+      "import argparse\n",
+      "\n",
+      "parser = argparse.ArgumentParser(description='Run a computation')\n",
+      "parser.add_argument('a', type=float, help='First factor.')\n",
+      "parser.add_argument('b', type=float, help='Second factor.')\n",
+      "parser.add_argument('--n', type=int, help='Number of loops.', default=1)\n",
+      "args = parser.parse_args()\n",
+      "\n",
+      "for i in range(args.n):\n",
+      "    print (args.a*args.b)**i"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Visualisation 3D\n",
+      "----------------\n",
+      "\n",
+      "- Le logiciel [mayavi2](http://docs.enthought.com/mayavi/mayavi/auto/examples.html) permet de r\u00e9aliser des visualisations en 3D: points, volume, courbes, etc.\n",
+      "- La pr\u00e9paration des donn\u00e9es se fait avec numpy.\n",
+      "- Le rendu utilise le moteur [VTK](http://www.vtk.org/).\n",
+      "- Usage: interactif / script / application compl\u00e8te."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
