Ajout de brentq et exo marche aléatoire.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1635,12 +1635,71 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Exercice: z\u00e9ro d'une \u00e9quation\n",
+      "-----------------------------\n",
+      "\n",
+      "- Pour la fonction f ci-dessous et le param\u00e8tre $\\mu=3$, trouver la solution $f(x)=x$ pour $0<x<1$.\n",
+      "- Utilisez la fonction scipy.optimize.brentq\n"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "def f(x, mu):\n",
+      "    return mu*x*(1-x)\n",
+      "def f_root(x, mu):\n",
+      "    return f(x,mu)-x"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 130
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = linspace(0, 1, 101)\n",
+      "mu = 3.\n",
+      "plot(x, x)\n",
+      "plot(x, f(x, mu))\n",
+      "from scipy.optimize import brentq\n",
+      "x_cross = brentq(f_root, 0.01, 0.99, args=(mu,))\n",
+      "axvline(x_cross)"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 132
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Exercice: Simulation de marche al\u00e9atoire\n",
+      "----------------------------------------\n",
+      "\n",
+      "- R\u00e9aliser un probl\u00e8me de marche al\u00e9atoire sur un axe entier.\n",
+      "- Instructions (source: SciPy lecture notes):\n",
+      "    - G\u00e9n\u00e9rer, avec la commande random_integers, un tableau de pas -1 ou 1.\n",
+      "    - Stocker le tableau dans un fichier texte \"walk_ii.txt\" (ii entre 1 et 32).\n",
+      "    - R\u00e9aliser la somme cumulative avec la commande cumsum sur chaque trajectoire.\n",
+      "    - Le r\u00e9sultat doit \u00eatre un tableau [Ntraj,Nsteps] repr\u00e9sentant toutes les trajectoires.\n",
+      "    - Le point de d\u00e9part est z\u00e9ro, calculez: la distance carr\u00e9e, sa moyenne.\n",
+      "    - Tracez le r\u00e9sultat.\n"
+     ]
     }
    ],
    "metadata": {}
