--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1692,7 +1692,7 @@
       "----------------------------------------\n",
       "\n",
       "- R\u00e9aliser un probl\u00e8me de marche al\u00e9atoire sur un axe entier.\n",
-      "- Instructions (source: SciPy lecture notes):\n",
+      "- Instructions (source: [SciPy lecture notes](http://scipy-lectures.github.io/intro/numpy/operations.html)):\n",
       "    - G\u00e9n\u00e9rer, avec la commande random_integers, un tableau de pas -1 ou 1.\n",
       "    - Stocker le tableau dans un fichier texte \"walk_ii.txt\" (ii entre 1 et 32).\n",
       "    - R\u00e9aliser la somme cumulative avec la commande cumsum sur chaque trajectoire.\n",
