--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1700,6 +1700,54 @@
       "    - Le point de d\u00e9part est z\u00e9ro, calculez: la distance carr\u00e9e, sa moyenne.\n",
       "    - Tracez le r\u00e9sultat.\n"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Exercice: Ajustement de fonction par moindres carr\u00e9s\n",
+      "----------------------------------------------------\n",
+      "\n",
+      "- Suivez la d\u00e9finition de x, y et de la fonction de test et de co\u00fbt.\n",
+      "- Utilisez scipy.optimize.leastsq pour obtenir les coefficients"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = arange(100)/5.\n",
+      "y = sin(x)+x/4+0.3*rand(len(x))\n",
+      "def ftest(p, v): return p[0] + p[1]*v + p[2]*sin(v)\n",
+      "def fcost(p, v, d): return ftest(p,v) - d\n",
+      "from scipy.optimize import leastsq"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 137
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "p0 = [1, 1, 1]\n",
+      "pr = leastsq(fcost, p0, args=(x,y))\n",
+      "p = pr[0]\n",
+      "plot(x,y)\n",
+      "plot(x, ftest(p,x))"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
+     "outputs": []
     }
    ],
    "metadata": {}
