Changement de slide_type.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1686,7 +1686,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Exercice: Simulation de marche al\u00e9atoire\n",
       "----------------------------------------\n",
