ajout notation indicielle.

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1234,6 +1234,23 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Notation indicielle\n",
+      "-------------------\n",
+      "\n",
+      "- x[1:] tout x sauf le premier \u00e9l\u00e9ment\n",
+      "- x[::3] \u00e9l\u00e9ments 0, 3, 6, ...\n",
+      "- x[:-1] tout x sauf le dernier \u00e9lement\n",
+      "- y = x[1::2, 1::2] retourne une \"vue\" sur x et n'alloue pas de nouvelle m\u00e9moire"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
        "slide_type": "slide"
       }
      },
