--- a/intro.ipynb
+++ b/intro.ipynb
@@ -50,7 +50,8 @@
       "\n",
       "- Cette pr\u00e9sentation est \u00e9crite dans un *Notebook* IPython.\n",
       "- Tous les exemples de code peuvent \u00eatre copi\u00e9s et coll\u00e9s dans un terminal ou un notebook IPython (apr\u00e8s requ\u00eate \"%pylab\").\n",
-      "- Cette pr\u00e9sentation utilise Python 2 (Python 3 existe mais n'est pas celle utilis\u00e9e par d\u00e9faut)."
+      "- Cette pr\u00e9sentation utilise Python 2 (Python 3 existe mais n'est pas celle utilis\u00e9e par d\u00e9faut).\n",
+      "- N'h\u00e9sitez pas \u00e0 m'interrompre."
      ]
     },
     {
