ajout dernier exo

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1831,6 +1831,25 @@
       }
      },
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Exercice: cr\u00e9er une classe\n",
+      "--------------------------\n",
+      "\n",
+      "- La classe repr\u00e9sente un ensemble de points connect\u00e9s al\u00e9atoirement.\n",
+      "- La classe peut \u00eatre initialis\u00e9e avec:\n",
+      "    - un nom de fichier.\n",
+      "    - un param\u00e8tre (nombre de points).\n",
+      "- Si le fichier existe, il est lu.\n",
+      "- Combinez la classe avec un programme en ligne de commande pour g\u00e9rer l'\u00e9x\u00e9cution."
+     ]
     }
    ],
    "metadata": {}
